# qt-plugin

./: CMakeLists.txt  CMakePresets.json  PluginInterface.h  README.md
mainapp/: CMakeLists.txt  MainWindow.h  main.cpp
plugin/: CMakeLists.txt  MyPlugin.cpp
pluginrunner/: CMakeLists.txt  PluginDaemon.h  main.cpp
